--- a/PRUEBA/INDEX.HTML
+++ b/PRUEBA/INDEX.HTML
@@ -4,6 +4,7 @@
         <title>PRUEBA</title>
     </head>
     <body>
-        NOMBRE:OSCAR RODRIGUEZ UYABAN
+        <h1> NOMBRE:OSCAR RODRIGUEZ UYABAN </h1>
+    	<h1> CODIGO: 1014185269 </h1>
     </body>
 </html>
